--- a/src/main/client/extjs/classic/themes-custombuilt-override.css
+++ b/src/main/client/extjs/classic/themes-custombuilt-override.css
@@ -19,53 +19,51 @@ body > .x-mask {
 /* ---------- Ext.button.Button */
 /* Add default icon family to FA free */
 .x-btn-icon-el:empty { font-family: var(--fa-style-family-classic); }
-/* Fix arrow color not customizable via SenchaThemer */
-.x-btn-button-secondary-small .x-btn-arrow-right:after,
-.x-btn-button-secondary-medium .x-btn-arrow-right:after,
-.x-btn-button-secondary-large .x-btn-arrow-right:after {
+/* Buttons secondary: fix arrow-icon color (not customizable via SenchaThemer) */
+.x-btn.x-btn-ui-button-secondary .x-btn-arrow:after {
     color: var(--wt-theme-color-1);
+}
+/* Buttons tertiary|taskbar: fix arrow-icon color (not customizable via SenchaThemer) */
+.x-btn.x-btn-ui-button-taskbar .x-btn-arrow:after,
+.x-btn.x-btn-ui-button-tertiary .x-btn-arrow:after {
+    color: var(--wt-theme-color-n1);
 }
 
 /* ---------- Ext.button.Segmented */
 /* Customize segmented UI */
-.x-btn-button-segmented-small.x-btn-pressed .x-btn-inner,
-.x-btn-button-segmented-medium.x-btn-pressed .x-btn-inner,
-.x-btn-button-segmented-large.x-btn-pressed .x-btn-inner {
+.x-btn-ui-button-segmented.x-btn-pressed .x-btn-inner {
     color: var(--wt-theme-color-1);
 }
 
 /* ---------- Ext.button.Split */
-/* Force icon color */
-.x-btn-wrap-button-secondary-small.x-btn-split:after,
-.x-btn-wrap-button-tertiary-small.x-btn-split:after { color: var(--wt-theme-color-1); }
-.x-btn-wrap-button-secondary-medium.x-btn-split:after,
-.x-btn-wrap-button-tertiary-medium.x-btn-split:after { color: var(--wt-theme-color-1); }
-.x-btn-wrap-button-secondary-large.x-btn-split:after,
-.x-btn-wrap-button-tertiary-large.x-btn-split:after { color: var(--wt-theme-color-1); }
-/* Fix separator color and height (default was a top-bottom line) */
-.x-btn-wrap-default-small.x-btn-split-right > .x-btn-button:after,
-.x-btn-wrap-default-medium.x-btn-split-right > .x-btn-button:after,
-.x-btn-wrap-default-large.x-btn-split-right > .x-btn-button:after {
+/* Reduce right line-separator a little for all buttons (by default was a top-bottom line) */
+.x-btn .x-btn-wrap.x-btn-split-right > .x-btn-button:after {
     height: 100%;
     /*top: -5%; for original lineheight */
     top: 0%;
+}
+/* Buttons secondary: fix line-separator color */
+.x-btn.x-btn-ui-button-secondary .x-btn-wrap.x-btn-split > .x-btn-button:after {
     border-color: var(--wt-theme-color-1);
 }
-.x-btn-wrap-button-secondary-small.x-btn-split-right > .x-btn-button:after,
-.x-btn-wrap-button-secondary-medium.x-btn-split-right > .x-btn-button:after,
-.x-btn-wrap-button-secondary-large.x-btn-split-right > .x-btn-button:after {
-    height: 100%;
-    /*top: -5%; for original lineheight */
-    top: 0%;
-    border-color: var(--wt-theme-color-1);
+/* Buttons secondary: fix split arrow-icon color */
+.x-btn.x-btn-ui-button-secondary .x-btn-split:after {
+    color: var(--wt-theme-color-1);
 }
-.x-btn-wrap-button-tertiary-small.x-btn-split-right > .x-btn-button:after,
-.x-btn-wrap-button-tertiary-medium.x-btn-split-right > .x-btn-button:after,
-.x-btn-wrap-button-tertiary-large.x-btn-split-right > .x-btn-button:after {
-    height: 100%;
-    /*top: -5%; for original lineheight */
-    top: 0%;
-    border-color: var(--wt-theme-color-1);
+/* Buttons tertiary|taskbar|toolbar: fix line-separator color and padding */
+.x-btn.x-btn-ui-button-taskbar .x-btn-wrap.x-btn-split > .x-btn-button:after,
+.x-btn.x-btn-ui-button-tertiary .x-btn-wrap.x-btn-split > .x-btn-button:after {
+    border-color: transparent;
+}
+.x-btn.x-btn-ui-default-toolbar .x-btn-wrap.x-btn-split-right > .x-btn-button,
+.x-btn.x-btn-ui-button-taskbar .x-btn-wrap.x-btn-split-right > .x-btn-button,
+.x-btn.x-btn-ui-button-tertiary .x-btn-wrap.x-btn-split-right > .x-btn-button {
+    padding-right: 0px;
+}
+/* Buttons tertiary|taskbar: fix split arrow-icon color */
+.x-btn.x-btn-ui-button-taskbar .x-btn-split:after,
+.x-btn.x-btn-ui-button-tertiary .x-btn-split:after {
+    color: var(--wt-theme-color-n1);
 }
 
 /* ---------- Ext.form.field.Text */
